# Trigonometricly

./: .gitignore  CMakeLists.txt  CMakePresets.json  main.cpp  windows-toolchain.cmake
shaders/: line.frag
src/: InitVulkan.cpp  InitVulkan.hpp  sine.cpp  sine.hpp
